# memeproof

./: .gitignore  ARCHITECTURE.md  README.md
backend/: .env.example  main.py  pyproject.toml
backend/app/: config.py
backend/app/routes/: memories.py  verify.py
backend/app/services/: hashing.py  walrus.py
contracts/: Cargo.toml
contracts/src/: lib.rs  test.rs
contracts/test_snapshots/test/: test_anchor_memory.1.json  test_get_agent_memory_count.1.json  test_get_agents_by_owner.1.json  test_multiple_memories.1.json  test_register.1.json  test_rename.1.json
frontend/: .env.example  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/agents/: agent-list.tsx  page.tsx
frontend/src/app/agents/[id]/: page.tsx
frontend/src/app/agents/[id]/anchor/: page.tsx
frontend/src/app/agents/new/: page.tsx
frontend/src/app/verify/: page.tsx
frontend/src/components/: connect-wallet.tsx
frontend/src/lib/: api.ts  providers.tsx  stellar-provider.tsx  stellar.ts  types.ts
